# RescueOps.ai

./: .dockerignore  .env.example  .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  CREWAI-DOCS.md  CREWAI-USAGE.md  DEMO-SCRIPT.md  Dockerfile  KICKOFF-TRANSCRIPT.md  OVERALL.md  README.md  RECON-B0.md  TRACK-A.md  TRACK-B.md  TRUEFOUNDRY.md  agents.py  app.py  audit.py  chaos.py  config.py  demo_example.json  dev.sh  evaluation.py  events.py  incident_chat.py  incidents.py  index.html  llm_client.py  main.py  notify.py  package-lock.json  package.json  pipeline.py  policy.json  policy.py  railway.json  readmedoc.txt  requirements-local.txt  (+6 more)
.streamlit/: config.toml
agents/chat/: index.py
agents/eval/: index.py
agents/incident/: index.py
agents/ping/: index.py
api/: server.py
cloud-functions/: _storage.py  requirements.txt
cloud-functions/api/: _sms.py  _stub.py  index.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  components.jsx  styles.css
packs/it-ops/: floor.json  rubric.md  scenarios.json
rescueops/: .env.example  README.md  pyproject.toml
rescueops/src/rescueops/: config.py  main.py
rescueops/src/rescueops/crews/content_crew/: content_crew.py
scripts/: seed_incidents.py
tests/: test_incident_agent_handler.py  test_incident_chat.py  test_llm_client.py  test_pipeline_commander_integration.py  test_policy_state_machine.py  test_secops_pack.py  test_sms_channel.py  test_track_a_refactor.py
web/: App.jsx  OpsFloor.jsx  api.js  components.jsx  floorMap.js  styles.css
(+5 files in other folders)
