[project]
name = "rescueops"
version = "0.1.0"
description = "rescueops using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
]

[project.scripts]
kickoff = "rescueops.main:kickoff"
run_crew = "rescueops.main:kickoff"
plot = "rescueops.main:plot"
run_with_trigger = "rescueops.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
flow_entry_point = "rescueops.main:ContentFlow"

[tool.hatch.build.targets.wheel]
packages = ["src/rescueops"]
